@@ -27,24 +27,19 @@ download.file <-
         match.arg(method, c("auto", "internal", "wininet", "libcurl",
                             "wget", "curl", "lynx"))
 
-    if(missing(mode) && length(grep("\\.(gz|bz2|xz|tgz|zip|rda|RData)$", url))) mode <- "wb"
+    if(missing(mode) && length(grep("\\.(gz|bz2|xz|tgz|zip|rda|RData)$", url)))
+        mode <- "wb"
     if(method == "auto") {
 	method <-
             if(capabilities("libcurl") &&
                ((grepl("^ftps:", url) ||
                 (grepl("^https:", url) && !setInternet2(NA)))))
                 "libcurl"
-            else if(capabilities("http/ftp"))
-		"internal"
-	    else if(grepl("^file:", url)) {
-		url <- URLdecode(url)
-		"internal"
-	    } else if(system("wget --help", invisible=TRUE) == 0L)
-		"wget"
-	    else if(system("curl --help", invisible=TRUE) == 0L)
-		"curl"
-	    else
-		stop("no download method found")
+##  	    else if(grepl("^file:", url)) {
+## 		url <- URLdecode(url)
+## 		"internal"
+## 	    }
+            else "internal"
     }
 
     switch(method,
@@ -80,7 +75,7 @@ download.file <-
 				      " -o", shQuote(path.expand(destfile))))
 	   },
 	   "lynx" =
-	       stop("method 'lynx' is defunct as from R 3.1.0", domain = NA))
+	       stop("method 'lynx' is defunct", domain = NA))
 
     if(status > 0L)
         warning("download had nonzero exit status")
