@@ -15,14 +15,8 @@ Type 'demo()' for some demos, 'help()' for on-line help, or
 'help.start()' for an HTML browser interface to help.
 Type 'q()' to quit R.
 
-> ## These are tests that require internet functionality, and
-> ## a working Internet connection.
-> ## We attempt to test for those.
-> 
-> if(!capabilities()["http/ftp"]) {
-+     warning("no internet capabilities")
-+     q()
-+ }
+> ## These are tests that require a working Internet connection.
+> ## We attempt to test for that.
 > 
 > if(.Platform$OS.type == "unix" &&
 +    is.null(nsl("cran.r-project.org"))) q()
